# Nexora-AI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  bad_run_full.json  docker-compose.override.yml  docker-compose.yml  f23_run.json  last_run_debug.json  learnings.md  main.py  notes.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_full.json  sp.py  streamlit_app.py  test_rugpull_quick.py  ui.py
ai_risk/: __init__.py  config.py  rug_pull_detector.py  types.py
alembic/: env.py
app/: config.py  main.py
chain/: abis.py  chains.py  client.py  rpc.py  snapshot.py
db/: deps.py  session.py
defi/: __init__.py  compiler_uniswap_v2.py
docs/: README.md  architecture-overview.md  f24-hld.md  f24-lld.md  frontend_integration.md  project-README.md  ui-demo-spec.md
graph/: artifacts.py  checkpointing.py  graph.py  nodes.py  schemas.py  state.py
llm/: client.py  prompts.py
policy/: engine.py  rules.py  types.py
tests/: conftest.py  test_agent_result_schema.py  test_chat_action_runs.py  test_chat_clarify_loop.py  test_chat_intent_classification.py  test_chat_query_tools.py  test_chat_route_api.py  test_checkpoint_thread_id.py  test_clarify_flow.py  test_clarify_node.py  test_confirmation_tracking_api.py  test_defi_compiler.py  test_final_status_resolver.py  test_finalize_node.py  test_judge_agent_api.py  test_judge_schema.py  test_langsmith_optional.py  test_llm_planner_api.py  test_needs_input_helpers.py  test_plan_tx_needs_input.py  test_policy_defi_rules.py  test_policy_engine.py  (+14 more)
(+111 files in other folders)
